[package]

name = "queuecheck"
authors = ["Kyle Mayes <kyle@mayeses.com>"]

version = "0.0.1"

readme = "README.md"
license = "Apache-2.0"

description = "A queue testing and benchmarking library."

documentation = "https://kylemayes.github.io/queuecheck/queuecheck"
repository = "https://github.com/KyleMayes/queuecheck"

[dependencies]

clippy = { version = "0.0.*", optional = true }
