[package]

name = "queuecheck"
authors = ["Kyle Mayes <kyle@mayeses.com>"]

version = "0.1.1"

readme = "README.md"
license = "Apache-2.0"

description = "A thread-safe queue testing and benchmarking library."

documentation = "https://docs.rs/queuecheck"
repository = "https://github.com/KyleMayes/queuecheck"

keywords = ["queue", "lock-free", "wait-free"]
